--- a/login.html
+++ b/login.html
@@ -6,35 +6,55 @@
     <title>登录页</title>
     <link rel="stylesheet" href="./css/mui.min.css">
     <script src="./js/mui.min.js"></script>
-    <script src="./js/mui.picker.js"></script>
-    <link rel="stylesheet" href="./css/mui.picker.css">
-    <script src="./js/mui.poppicker.js"></script>
-    <link rel="stylesheet" href="./css/mui.poppicker.css">
-    <script src="./js/mui.dtpicker.js"></script>
-    <link rel="stylesheet" href="./css/mui.dtpicker.css">
+    <script src="./js/jquery.1.10.2.js"></script>
 </head>
 <style>
-    .con{margin-top: 40px;padding: 30px 20px;}
-    button{width: 30%;}
+    .con{margin-top:40px;padding:30px 20px}
+    button{width:30%}
 </style>
 <body>
 <header class="mui-bar mui-bar-nav">
     <h1 class="mui-title">登录页</h1>
 </header>
 <div class="con">
-<form class="mui-input-group">
-    <div class="mui-input-row">
-        <label>手机号</label>
-        <input type="text" placeholder="请输入手机号">
-    </div>
-    <div class="mui-input-row">
-        <label>密码</label>
-        <input type="text" class="mui-input-clear" placeholder="请输入密码" data-input-clear="3"><span class="mui-icon mui-icon-clear mui-hidden"></span>
-    </div>
-    <div class="mui-button-row">
-        <button class="mui-btn mui-btn-primary" type="button" onclick="return false;">登录</button>
-    </div>
-</form>
+        <form class="mui-input-group">
+            <div class="mui-input-row">
+                <label>手机号</label>
+                <input type="text" class="mui-input-clear" id="myPhone" placeholder="请输入手机号"><span
+                    class="mui-icon mui-icon-clear mui-hidden"></span>
+            </div>
+
+            <div class="mui-input-row">
+                <label>密码</label>
+                <input type="password" class="mui-input-clear" id="myPwd" placeholder="请输入密码"><span
+                    class="mui-icon mui-icon-clear mui-hidden"></span>
+            </div>
+            <div class="mui-button-row">
+                <button class="mui-btn mui-btn-primary" id="btn-sub" type="button" onclick="return false;">登录</button>
+            </div>
+        </form>
 </div>
 </body>
+<script type="text/javascript" charset="utf-8">
+    function isPhone(phone){
+        var pattern = /^1[345789]\d{9}$/;
+        return pattern.test(phone);
+    }
+    function formValidate(myPhone,myPwd){
+        if(myPhone==''){
+            mui.alert('请输入手机号!！', function() { });
+        }else if(!isPhone(myPhone)){
+            mui.alert('手机号格式有误！', function() { });
+        }else if(myPwd==''){
+            mui.alert('请输入密码!！', function() { });
+        }else {
+            return true;
+        }
+    }
+    $("#btn-sub").click(function () {
+        var myPhone = $("#myPhone").val();
+        var myPwd = $("#myPwd").val();
+        formValidate(myPhone,myPwd);
+    })
+</script>
 </html>
