--- a/index02.html
+++ b/index02.html
@@ -5,28 +5,130 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>个人中心</title>
     <link rel="stylesheet" href="./css/mui.min.css">
+    <link rel="stylesheet" type="text/css" href="./css/iconfont.css">
     <script src="./js/mui.min.js"></script>
     <script src="./js/jquery.1.10.2.js"></script>
 </head>
 <style>
-    .c-img{width: 100%;padding: 10px 10px 0;}
+    .top-con {
+        position: relative
+    }
+
+    .top-img {
+    }
+
+    .top-myPic {
+        width: 22%;
+        -moz-border-radius: 50%;
+        -ms-border-radius: 50%;
+        -o-border-radius: 50%;
+        border-radius: 50%;
+        position: absolute;
+        top: 18%;
+        left: 50%;
+        margin-left: -11%;
+        border: 1px solid #ccc;
+        -webkit-box-shadow: 0 0px 6px #ccc;
+        box-shadow: 0 0px 6px #ccc;
+    }
+
+    .top-myName {
+        position: absolute;
+        bottom: 26%;
+        color: #ffffff;
+        font-size: 1.22rem;
+        font-weight: normal;
+        text-align: center;
+        width: 100%
+    }
+
+    .top-icon {
+        position: absolute;
+        bottom: 8%;
+        color: #ffffff;
+        font-size: 0.84rem
+    }
+
+    .top-exit-icon {
+        position: absolute;
+        right: 2%;
+        top: 4%;
+        color: #ffffff;
+        font-size: 1.4rem;
+    }
 </style>
-<body style="background-color:#fff">
-<header class="mui-bar mui-bar-nav">
+<body style="background-color:#eaeaea">
+<div class="top-con">
+    <i class="iconfont icon-tuichu top-exit-icon"></i>
+    <img class="top-img" src="images/bg.jpg" alt="" width="100%"/>
+    <img class="top-myPic" src="images/person.jpg" alt=""/>
+
+    <h3 class="top-myName">15259810726</h3>
+
+    <div class="top-icon" style="width: 100%;"><span style="display:inline-block;width: 32%;text-align:center;"><i
+            class="iconfont icon-bianji"
+            style="font-size: 0.7rem;"></i>&nbsp;基本资料</span>
+        <span style="display:inline-block;width: 32%;text-align:center;"><i
+                class="iconfont icon-mima"
+                style="font-size: 0.9rem;"></i>&nbsp;修改密码</span>
+         <span style="display:inline-block;width: 32%;text-align:center;"><i
+                 class="iconfont icon-kecheng"
+                 style="font-size: 0.7rem;"></i>&nbsp;选课中心</span>
+    </div>
+</div>
+<div class="mui-card-content">
+    <div class="mui-card-header" style="background-color: #ffffff;">最近学习的课程</div>
+    <ul class="mui-table-view mui-table-view-chevron">
+     <!--   <li class="mui-table-view-cell mui-media">
+            暂无
+        </li>-->
+
+             <li class="mui-table-view-cell mui-media">
+                 <a class="mui-navigate-right">
+                     <img class="mui-media-object mui-pull-left" src="images/01.jpg">
+                     <div class="mui-media-body">
+                         Android 应用开发
+                         <p class="mui-ellipsis">上次学习:2018-01-17 14:53:38</p>
+                     </div>
+                 </a>
+             </li>
+             <li class="mui-table-view-cell mui-media">
+                 <a class="mui-navigate-right" href="javascript:;">
+                     <img class="mui-media-object mui-pull-left" src="images/01.jpg">
+                     <div class="mui-media-body">
+                         Android 应用开发
+                         <p class="mui-ellipsis">上次学习:2018-01-17 14:53:38</p>
+                     </div>
+                 </a>
+             </li>
+             <li class="mui-table-view-cell mui-media">
+                 <a class="mui-navigate-right">
+                     <img class="mui-media-object mui-pull-left" src="images/01.jpg">
+                     <div class="mui-media-body">
+                         Android 应用开发
+                         <p class="mui-ellipsis">上次学习:2018-01-17 14:53:38</p>
+                     </div>
+                 </a>
+             </li>
+             <li class="mui-table-view-cell mui-media">
+                 <a class="mui-navigate-right">
+                     <img class="mui-media-object mui-pull-left" src="images/01.jpg">
+                     <div class="mui-media-body">
+                         Android 应用开发
+                         <p class="mui-ellipsis">上次学习:2018-01-17 14:53:38</p>
+                     </div>
+                 </a>
+             </li>
+    </ul>
+
+</div>
+<!--<header class="mui-bar mui-bar-nav">
     <h1 class="mui-title">个人中心</h1>
 </header>
-<div class="mui-content" style="background-color:#fff">
-    <ul class="mui-table-view mui-grid-view mui-grid-9" style="background-color:#fff;border: none">
-        <li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3" style="border: none"><a href="#">
-            <span class="mui-icon mui-icon-home"></span>
-            <div class="mui-media-body">基本资料</div></a></li>
-        <li class="mui-table-view-cell mui-media mui-col-xs-4 mui-col-sm-3" style="border: none"><a href="#">
-            <span class="mui-icon mui-icon-email"></span>
-            <div class="mui-media-body">Email</div></a></li>
 
-    </ul>
-    <img class="c-img" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1516195158762&di=ca604694806faae7e73959a872a0b63e&imgtype=0&src=http%3A%2F%2Fimg.zcool.cn%2Fcommunity%2F01661d58a2bdb9a801219c77dc1457.jpg%401280w_1l_2o_100sh.jpg" alt=""/>
-    <div class="mui-card">
+<div class="mui-content" style="background-color:#fff">
+    <a href="">基本资料</a><a href="">密码修改</a>
+   <div class="mui-card">
         <div class="mui-card-header">最近学习的课程</div>
         <div class="mui-card-content">
             <ul class="mui-table-view mui-table-view-chevron">
@@ -61,7 +163,9 @@
 
         </div>
     </div>
- <!--   <div class="mui-card">
+&lt;!&ndash;    <img class="c-img" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1516195158762&di=ca604694806faae7e73959a872a0b63e&imgtype=0&src=http%3A%2F%2Fimg.zcool.cn%2Fcommunity%2F01661d58a2bdb9a801219c77dc1457.jpg%401280w_1l_2o_100sh.jpg" alt=""/>
+
+    <div class="mui-card">
         <div class="mui-card-header">在线选课</div>
         <div class="mui-card-content">
                 <ul class="mui-table-view mui-grid-view">
@@ -87,8 +191,8 @@
                 </ul>
 
         </div>
-    </div>-->
+    </div>&ndash;&gt;
 
-</div>
+</div>-->
 </body>
 </html>
