--- a/index02.html
+++ b/index02.html
@@ -52,14 +52,15 @@
     .top-exit-icon {
         position: absolute;
         right: 2%;
-        top: 4%;
+        top: 14px;
         color: #ffffff;
         font-size: 1.4rem;
     }
 </style>
 <body style="background-color:#eaeaea">
 <div class="top-con">
-    <i class="iconfont icon-tuichu top-exit-icon"></i>
+    <a id="btn-exit" class="mui-icon mui-icon-bars top-exit-icon" href="javascript:;"></a>
+
     <img class="top-img" src="images/bg.jpg" alt="" width="100%"/>
     <img class="top-myPic" src="images/person.jpg" alt=""/>
 
@@ -67,13 +68,13 @@
 
     <div class="top-icon" style="width: 100%;"><span style="display:inline-block;width: 32%;text-align:center;"><i
             class="iconfont icon-bianji"
-            style="font-size: 0.7rem;"></i>&nbsp;基本资料</span>
+            style="font-size: 0.7rem;"></i>&nbsp;<a href="my-msg.html" style="color: #ffffff">基本资料</a></span>
         <span style="display:inline-block;width: 32%;text-align:center;"><i
                 class="iconfont icon-mima"
-                style="font-size: 0.9rem;"></i>&nbsp;修改密码</span>
+                style="font-size: 0.9rem;"></i>&nbsp;<a href="modify-pwd.html" style="color: #ffffff">修改密码</a></span>
          <span style="display:inline-block;width: 32%;text-align:center;"><i
                  class="iconfont icon-kecheng"
-                 style="font-size: 0.7rem;"></i>&nbsp;选课中心</span>
+                 style="font-size: 0.7rem;"></i>&nbsp;<a href="course-list.html" style="color: #ffffff">选课中心</a></span>
     </div>
 </div>
 <div class="mui-card-content">
@@ -120,79 +121,28 @@
                  </a>
              </li>
     </ul>
-
 </div>
-<!--<header class="mui-bar mui-bar-nav">
-    <h1 class="mui-title">个人中心</h1>
-</header>
+<div class="mui-popover mui-active exit-con" style="display:none;position: fixed;right:4px;top: 50px;width: auto;padding: 10px;text-align: center;font-size: 0.9rem;">
+    <div class="mui-popover-arrow" style="left: 45px;"></div>
+    <a class="exit" href="javascript:;" style="color: #000000">退出登录</a>
+</div>
+<div class="mui-backdrop mui-active" style="display:none;"></div>
+<script>
+$("#btn-exit").click(function(){
+        $(".exit-con").show();
+        $(".mui-backdrop").show();
+})
+    $(".exit").click(function(){
+        $(".exit-con").hide();
+        mui.alert('您已退出登录', function () {
+            window.location="login.html"
 
-<div class="mui-content" style="background-color:#fff">
-    <a href="">基本资料</a><a href="">密码修改</a>
-   <div class="mui-card">
-        <div class="mui-card-header">最近学习的课程</div>
-        <div class="mui-card-content">
-            <ul class="mui-table-view mui-table-view-chevron">
-                <li class="mui-table-view-cell mui-media">
-                    <a class="mui-navigate-right">
-                        <img class="mui-media-object mui-pull-left" src="images/01.jpg">
-                        <div class="mui-media-body">
-                            Android 应用开发
-                            <p class="mui-ellipsis">上次学习:2018-01-17 14:53:38</p>
-                        </div>
-                    </a>
-                </li>
-                <li class="mui-table-view-cell mui-media">
-                    <a class="mui-navigate-right" href="javascript:;">
-                        <img class="mui-media-object mui-pull-left" src="images/01.jpg">
-                        <div class="mui-media-body">
-                            Android 应用开发
-                            <p class="mui-ellipsis">上次学习:2018-01-17 14:53:38</p>
-                        </div>
-                    </a>
-                </li>
-                <li class="mui-table-view-cell mui-media">
-                    <a class="mui-navigate-right">
-                        <img class="mui-media-object mui-pull-left" src="images/01.jpg">
-                        <div class="mui-media-body">
-                            Android 应用开发
-                            <p class="mui-ellipsis">上次学习:2018-01-17 14:53:38</p>
-                        </div>
-                    </a>
-                </li>
-            </ul>
-
-        </div>
-    </div>
-&lt;!&ndash;    <img class="c-img" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1516195158762&di=ca604694806faae7e73959a872a0b63e&imgtype=0&src=http%3A%2F%2Fimg.zcool.cn%2Fcommunity%2F01661d58a2bdb9a801219c77dc1457.jpg%401280w_1l_2o_100sh.jpg" alt=""/>
-
-    <div class="mui-card">
-        <div class="mui-card-header">在线选课</div>
-        <div class="mui-card-content">
-                <ul class="mui-table-view mui-grid-view">
-                    <li class="mui-table-view-cell mui-media mui-col-xs-6">
-                        <a href="#">
-                            <img class="mui-media-object" src="images/01.jpg">
-                            <div class="mui-media-body">Android 应用开发</div></a></li>
-                    <li class="mui-table-view-cell mui-media mui-col-xs-6">
-                        <a href="#">
-                            <img class="mui-media-object" src="images/01.jpg">
-                            <div class="mui-media-body">Android 应用开发</div></a></li>
-                    <li class="mui-table-view-cell mui-media mui-col-xs-6">
-                        <a href="#"><img class="mui-media-object" src="images/01.jpg">
-                            <div class="mui-media-body">Android 应用开发</div></a></li>
-                    <li class="mui-table-view-cell mui-media mui-col-xs-6">
-                        <a href="#">
-                            <img class="mui-media-object" src="images/01.jpg">
-                            <div class="mui-media-body">Android 应用开发</div></a></li>
-                    <li class="mui-table-view-cell mui-media mui-col-xs-6">
-                        <a href="#">
-                            <img class="mui-media-object" src="images/01.jpg">
-                            <div class="mui-media-body">Android 应用开发</div></a></li>
-                </ul>
-
-        </div>
-    </div>&ndash;&gt;
-
-</div>-->
+        });
+    })
+    $(".mui-backdrop").click(function(){
+        $(".exit-con").fadeOut(300);
+        $(".mui-backdrop").fadeOut(300);
+    })
+</script>
 </body>
 </html>
