--- a/course-list.html
+++ b/course-list.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
     <title>课程中心</title>
     <link rel="stylesheet" href="./css/mui.min.css">
     <script src="./js/mui.min.js"></script>
