--- a/index02.html
+++ b/index02.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
     <title>个人中心</title>
     <link rel="stylesheet" href="./css/mui.min.css">
     <link rel="stylesheet" type="text/css" href="./css/iconfont.css">
@@ -13,10 +13,6 @@
     .top-con {
         position: relative
     }
-
-    .top-img {
-    }
-
     .top-myPic {
         width: 22%;
         -moz-border-radius: 50%;
@@ -24,7 +20,7 @@
         -o-border-radius: 50%;
         border-radius: 50%;
         position: absolute;
-        top: 18%;
+        top: 24%;
         left: 50%;
         margin-left: -11%;
         border: 1px solid #ccc;
@@ -34,115 +30,44 @@
 
     .top-myName {
         position: absolute;
-        bottom: 26%;
+        bottom: 18%;
         color: #ffffff;
-        font-size: 1.22rem;
+
         font-weight: normal;
         text-align: center;
         width: 100%
     }
-
-    .top-icon {
-        position: absolute;
-        bottom: 8%;
-        color: #ffffff;
-        font-size: 0.84rem
-    }
-
-    .top-exit-icon {
-        position: absolute;
-        right: 2%;
-        top: 14px;
-        color: #ffffff;
-        font-size: 1.4rem;
-    }
 </style>
 <body style="background-color:#eaeaea">
 <div class="top-con">
-    <a id="btn-exit" class="mui-icon mui-icon-bars top-exit-icon" href="javascript:;"></a>
-
     <img class="top-img" src="images/bg.jpg" alt="" width="100%"/>
     <img class="top-myPic" src="images/person.jpg" alt=""/>
-
-    <h3 class="top-myName">15259810726</h3>
-
-    <div class="top-icon" style="width: 100%;"><span style="display:inline-block;width: 32%;text-align:center;"><i
-            class="iconfont icon-bianji"
-            style="font-size: 0.7rem;"></i>&nbsp;<a href="my-msg.html" style="color: #ffffff">基本资料</a></span>
-        <span style="display:inline-block;width: 32%;text-align:center;"><i
-                class="iconfont icon-mima"
-                style="font-size: 0.9rem;"></i>&nbsp;<a href="modify-pwd.html" style="color: #ffffff">修改密码</a></span>
-         <span style="display:inline-block;width: 32%;text-align:center;"><i
-                 class="iconfont icon-kecheng"
-                 style="font-size: 0.7rem;"></i>&nbsp;<a href="course-list.html" style="color: #ffffff">选课中心</a></span>
-    </div>
+    <h4 class="top-myName">15259810726</h4>
 </div>
-<div class="mui-card-content">
-    <div class="mui-card-header" style="background-color: #ffffff;">最近学习的课程</div>
-    <ul class="mui-table-view mui-table-view-chevron">
-     <!--   <li class="mui-table-view-cell mui-media">
-            暂无
-        </li>-->
 
-             <li class="mui-table-view-cell mui-media">
-                 <a class="mui-navigate-right">
-                     <img class="mui-media-object mui-pull-left" src="images/01.jpg">
-                     <div class="mui-media-body">
-                         Android 应用开发
-                         <p class="mui-ellipsis">上次学习:2018-01-17 14:53:38</p>
-                     </div>
-                 </a>
-             </li>
-             <li class="mui-table-view-cell mui-media">
-                 <a class="mui-navigate-right" href="javascript:;">
-                     <img class="mui-media-object mui-pull-left" src="images/01.jpg">
-                     <div class="mui-media-body">
-                         Android 应用开发
-                         <p class="mui-ellipsis">上次学习:2018-01-17 14:53:38</p>
-                     </div>
-                 </a>
-             </li>
-             <li class="mui-table-view-cell mui-media">
-                 <a class="mui-navigate-right">
-                     <img class="mui-media-object mui-pull-left" src="images/01.jpg">
-                     <div class="mui-media-body">
-                         Android 应用开发
-                         <p class="mui-ellipsis">上次学习:2018-01-17 14:53:38</p>
-                     </div>
-                 </a>
-             </li>
-             <li class="mui-table-view-cell mui-media">
-                 <a class="mui-navigate-right">
-                     <img class="mui-media-object mui-pull-left" src="images/01.jpg">
-                     <div class="mui-media-body">
-                         Android 应用开发
-                         <p class="mui-ellipsis">上次学习:2018-01-17 14:53:38</p>
-                     </div>
-                 </a>
-             </li>
-    </ul>
-</div>
-<div class="mui-popover mui-active exit-con" style="display:none;position: fixed;right:4px;top: 50px;width: auto;padding: 10px;text-align: center;font-size: 0.9rem;">
-    <div class="mui-popover-arrow" style="left: 45px;"></div>
-    <a class="exit" href="javascript:;" style="color: #000000">退出登录</a>
-</div>
-<div class="mui-backdrop mui-active" style="display:none;"></div>
-<script>
-$("#btn-exit").click(function(){
-        $(".exit-con").show();
-        $(".mui-backdrop").show();
-})
-    $(".exit").click(function(){
-        $(".exit-con").hide();
-        mui.alert('您已退出登录', function () {
-            window.location="login.html"
+<ul class="mui-table-view">
+    <li class="mui-table-view-cell">
+        <a class="mui-navigate-right" href="recent-course.html">
+            最近学习的课程
+        </a>
+    </li>
+    <li class="mui-table-view-cell">
+        <a class="mui-navigate-right" href="course-list.html">
+           在线选课中心
+        </a>
+    </li>
+    <li class="mui-table-view-cell">
+        <a class="mui-navigate-right" href="my-msg.html">
+            基本资料
+        </a>
+    </li>
+    <li class="mui-table-view-cell">
+        <a class="mui-navigate-right" href="modify-pwd.html">
+            修改密码
+        </a>
+    </li>
 
-        });
-    })
-    $(".mui-backdrop").click(function(){
-        $(".exit-con").fadeOut(300);
-        $(".mui-backdrop").fadeOut(300);
-    })
-</script>
+</ul>
+
 </body>
 </html>
