页面全好了
杨总说调下一点标志大小

--- a/index02.html
+++ b/index02.html
@@ -37,6 +37,7 @@
         text-align: center;
         width: 100%
     }
+    .mui-navigate-right:after, .mui-push-left:after, .mui-push-right:after{font-size: 26px;}
 </style>
 <body style="background-color:#eaeaea">
 <div class="top-con">
