--- a/recent-course.html
+++ b/recent-course.html
@@ -25,7 +25,7 @@
                </li>-->
 
             <li class="mui-table-view-cell mui-media">
-                <a class="mui-navigate-right">
+                <a href="detail-course.html" class="mui-navigate-right">
                     <img class="mui-media-object mui-pull-left" src="images/01.jpg">
 
                     <div class="mui-media-body">
@@ -35,7 +35,7 @@
                 </a>
             </li>
             <li class="mui-table-view-cell mui-media">
-                <a class="mui-navigate-right" href="javascript:;">
+                <a href="detail-course.html" class="mui-navigate-right">
                     <img class="mui-media-object mui-pull-left" src="images/01.jpg">
 
                     <div class="mui-media-body">
@@ -45,7 +45,7 @@
                 </a>
             </li>
             <li class="mui-table-view-cell mui-media">
-                <a class="mui-navigate-right">
+                <a href="detail-course.html" class="mui-navigate-right">
                     <img class="mui-media-object mui-pull-left" src="images/01.jpg">
 
                     <div class="mui-media-body">
@@ -55,7 +55,7 @@
                 </a>
             </li>
             <li class="mui-table-view-cell mui-media">
-                <a class="mui-navigate-right">
+                <a href="detail-course.html" class="mui-navigate-right">
                     <img class="mui-media-object mui-pull-left" src="images/01.jpg">
 
                     <div class="mui-media-body">
