--- a/my-msg.html
+++ b/my-msg.html
@@ -28,6 +28,21 @@
     }
     .tip{font-size: 0.8rem;height: 40px;line-height: 40px;color: red;text-align: center}
     .mySelect{float: right;color: #999999;font-size: 0.9rem;width: auto;padding: 0;margin: 0;text-align: right;}
+    .file{
+        width: 50px;height: 50px;background-color: red;background: url(images/person.jpg) no-repeat;
+        background-size: 100% 100%;
+    }
+    #file{
+        opacity: 0;
+        width: 50px;
+        height: 50px;
+    }
+    #result{
+        background: url("images/person.jpg") no-repeat;
+        width: 50px;
+        height: 50px;
+        background-size: 100% 100%;
+    }
 </style>
 <body>
 <header class="mui-bar mui-bar-nav"><a class="mui-action-back mui-icon mui-icon-back"></a>
@@ -36,8 +51,8 @@
 </header>
 <div class="con">
     <ul class="mui-table-view">
-        <li class="mui-table-view-cell"><a href=""><span style="height: 50px;line-height: 50px;">头像</span> <span style="float:right;display:block;height: 50px;"><img style="border: none;padding: 0;margin: 0"
-                src="images/person.jpg" alt="" width="50"/></span></a></li>
+        <li class="mui-table-view-cell"><a href=""><span style="height: 50px;line-height: 50px;">头像</span> <span style="float:right;display:block;height: 50px;"><div id="result"><input
+                type="file" id="file"/></div></span></a></li>
         <li class="mui-table-view-cell"><a href="m-myName.html"><span style="">真实姓名</span> <span style="float: right;color: #999999;font-size: 0.9rem;">未填写</span></a></li>
         <li class="mui-table-view-cell"><span style="">手机号</span> <span style="float: right;color: #999999;font-size: 0.9rem;">15259810726</span></li>
         <li class="mui-table-view-cell"><a href="m-myId.html"><span style="">身份证号</span> <span style="float: right;color: #999999;font-size: 0.9rem;">未填写</span></a></li>
@@ -74,13 +89,35 @@
         <li class="mui-table-view-cell"><a href="m-myWechat.html"><span style="">微信号</span> <span style="float: right;color: #999999;font-size: 0.9rem;">未填写</span></a></li>
         <li class="mui-table-view-cell"><a href="m-myAdd.html"><span style="">地址</span> <span style="float: right;color: #999999;font-size: 0.9rem;">未填写</span></a></li>
     </ul>
+
 </div>
+
 <script>
     $(".mySelect").change(function(){
         var mySelect=$(this).val();
         mui.alert('您已选择年级'+mySelect, function () {
         });
     });
+
+    function ProcessFile( e ) {
+        var file = document.getElementById('file').files[0];
+        if ( file ) {
+
+            var reader = new FileReader();
+            reader.onload = function ( event ) {
+                var txt = event.target.result;
+                document.getElementById("result").style.backgroundImage='url('+txt+')';
+                /*数据将txt存入数据库*/
+            };
+        }
+        reader.readAsDataURL( file );
+    }
+    function contentLoaded() {
+        document.getElementById('file').addEventListener( 'change' ,
+                ProcessFile , false );
+    }
+    window.addEventListener( "DOMContentLoaded" , contentLoaded , false );
+
 </script>
 </body>
 </html>
